[gd_scene load_steps=8 format=3 uid="uid://bqjxf5fhm7vt5"]

[ext_resource type="PackedScene" uid="uid://i8ppadmnejok" path="res://player.tscn" id="1_7t5sj"]
[ext_resource type="Script" path="res://survivors_game.gd" id="1_51ayb"]
[ext_resource type="PackedScene" uid="uid://nyhveefm3qyt" path="res://pine_tree.tscn" id="2_266jo"]
[ext_resource type="PackedScene" uid="uid://cm3w85k1jd4p1" path="res://mob.tscn" id="3_x1wmq"]
[ext_resource type="Script" path="res://Score.gd" id="5_ps5d1"]
[ext_resource type="Script" path="res://Game_Over.gd" id="6_yd0lb"]

[sub_resource type="Curve2D" id="Curve2D_8jptb"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1000, -712, 0, 0, 0, 0, 856, -707, 0, 0, 0, 0, 858, 475, 0, 0, 0, 0, -984, 526, 0, 0, 0, 0, -960, -339, 0, 0, 0, 0, -1000, -707)
}
point_count = 6

[node name="Game" type="Node2D"]
y_sort_enabled = true
position = Vector2(601, 374)
script = ExtResource("1_51ayb")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = -0.0564236
anchor_top = -0.234568
anchor_right = -0.0564236
anchor_bottom = -0.234568
offset_left = -5.0
offset_top = -134.0
offset_right = 1218.0
offset_bottom = 822.0
metadata/_edit_use_anchors_ = true

[node name="Player" parent="." instance=ExtResource("1_7t5sj")]
position = Vector2(-20, -76)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(23, 27)
curve = SubResource("Curve2D_8jptb")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-1000, -712)
rotation = 0.00269396

[node name="Mob" parent="." instance=ExtResource("3_x1wmq")]
position = Vector2(-359, -40)

[node name="Mob2" parent="." instance=ExtResource("3_x1wmq")]
position = Vector2(-192, -183)

[node name="Mob3" parent="." instance=ExtResource("3_x1wmq")]
position = Vector2(216, -86)

[node name="Mob4" parent="." instance=ExtResource("3_x1wmq")]
position = Vector2(324, 53)

[node name="PineTree" parent="." instance=ExtResource("2_266jo")]
position = Vector2(-280, 205)

[node name="PineTree2" parent="." instance=ExtResource("2_266jo")]
position = Vector2(-359, -231)

[node name="PineTree3" parent="." instance=ExtResource("2_266jo")]
position = Vector2(324, 233)

[node name="PineTree4" parent="." instance=ExtResource("2_266jo")]
position = Vector2(216, -197)

[node name="PineTree5" parent="." instance=ExtResource("2_266jo")]
position = Vector2(273, -229)

[node name="PineTree6" parent="." instance=ExtResource("2_266jo")]
position = Vector2(256, -161)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="ScoreSystem" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="ScoreSystem"]
unique_name_in_owner = true
offset_left = 17.0
offset_top = 8.0
offset_right = 57.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Score: 0"
script = ExtResource("5_ps5d1")

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.721569)

[node name="Game_Over" type="Label" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.5
offset_top = -11.5
offset_right = 43.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 141
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("6_yd0lb")

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
